feat(paginator): page size labels
Add page size labels option to the paginator to allow for mapping labels to page sizes and display the labels in the drop-down.

Closes #8150

--- a/src/demo-app/paginator/paginator-demo.html
+++ b/src/demo-app/paginator/paginator-demo.html
@@ -30,6 +30,7 @@
                  [disabled]="disabled"
                  [showFirstLastButtons]="showFirstLastButtons"
                  [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+                 [pageSizeLabels]="showPageSizeOptions ? pageSizeLabels : []"
                  [hidePageSize]="hidePageSize"
                  [pageIndex]="pageIndex">
   </mat-paginator>
